--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/x-data-grid": "^8.17.0",
     "@mui/x-date-pickers": "^8.17.0",
     "axios": "^1.13.2",
+    "firebase": "^12.6.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.553.0",
@@ -24,7 +25,8 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
     "react-select": "^5.10.2",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
