--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_SOCKET_URL=http://192.168.100.59:2003
+# VITE_SOCKET_URL=http://192.168.100.59:2003
+VITE_SOCKET_URL=https://tho-dung-server.onrender.com
