--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 # VITE_SOCKET_URL=http://192.168.100.59:2003
+# VITE_API_URL=http://192.168.100.59:2003
+VITE_API_URL=https://tho-dung-server.onrender.com/apis
 VITE_SOCKET_URL=https://tho-dung-server.onrender.com
