--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_SOCKET_URL=http://192.168.100.113:2003
-VITE_API_URL=http://192.168.100.113:2003/apis
+VITE_SOCKET_URL=http://112.213.86.20:1406
+VITE_API_URL=http://112.213.86.20:1406/api/apis
 # VITE_API_URL=https://tho-dung-server.onrender.com
 # VITE_SOCKET_URL=https://tho-dung-server.onrender.com
